[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "builder"
path = "src/builder.rs"

[[bin]]
name = "driver"
path = "src/driver.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
raiko-pipeline = {path = "../../raiko/pipeline", features = ["sp1", "risc0"]}
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "main"}
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main"}

serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
raiko-lib = {path = "../../raiko/lib", features = ["std", "sp1"] }

# rust-kzg-zkcrypto = { path = "../../rust-kzg/zkcrypto" }
kzg = { path = "../../rust-kzg/kzg" }
serde = { version = "1.0"}

# rust-kzg-zkcrypto = { git = "https://github.com/grandinetech/rust-kzg.git" }
rust-kzg-arkworks =  { path = "../../rust-kzg/arkworks" }

c-kzg = { package = "c-kzg-taiko", git = "https://github.com/smtmfft/c-kzg-4844", branch = "for-alpha7", default-features = false, features = [
    "preload-kzg-settings",
    "no-threads",
]}
once_cell = { version = "1.19", default-features = false }
