[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false, features = ['std', "getrandom"] }
harness = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker", features = ["risc0"]}
harness-core = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker" }
