[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kzg-c"
path = "src/kzg_c.rs"

# [[bin]]
# name = "kzg-b"
# path = "src/kzg_b.rs"

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false, features = ['std', "getrandom"] }
harness = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker", features = ["risc0"]}
harness-core = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker" }
c-kzg = { package = "c-kzg-taiko", git = "https://github.com/smtmfft/c-kzg-4844", branch = "for-alpha7", default-features = false, features = [
    "preload-kzg-settings",
    "no-threads",
] }


# rust-kzg-zkcrypto = {path = "../../rust-kzg/zkcrypto", default-features = false}
# rust-kzg-blst = {path = "../../rust-kzg/blst", default-features = false}
# kzg = { path = "../../rust-kzg/kzg", default-features = false}
