[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keccak"
path = "src/keccak.rs"

[[bin]]
name = "secp256k1"
path = "src/secp256k1.rs"

[[bin]]
name = "kzg-z"
path = "src/kzg_z.rs"

[[bin]]
name = "kzg-a"
path = "src/kzg_a.rs"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
harness = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker", features = ["sp1"]}
harness-core = { git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker" }
raiko-lib = {  git = "https://github.com/taikoxyz/raiko.git", branch = "sp1-cycle-tracker", features = ["std", "sp1"] }
revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "v35_taiko_v2", default-features = false, features = [
    "taiko",
    "std",
    "c-kzg",
] }
revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "v35_taiko_v2", default-features = false }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "v0.10.8" }
sp1-precompiles = { git = "https://github.com/succinctlabs/sp1.git", branch = "main"}
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main"}

hashes = { package = "bitcoin_hashes", version = ">= 0.12, <= 0.14", default-features = false }
secp256k1 = { git = "https://github.com/CeciliaZ030/rust-secp256k1", branch = "sp1-patch", features = ["recovery", "sp1"]}

rust-kzg-zkcrypto = {path = "../../rust-kzg/zkcrypto", default-features = false}
kzg = { path = "../../rust-kzg/kzg", default-features = false}


# rust-kzg-zkcrypto = { git = "https://github.com/grandinetech/rust-kzg.git", default-features = false}
rust-kzg-arkworks = { git = "https://github.com/grandinetech/rust-kzg.git", default-features = false}

[patch.crates-io]
ecdsa = { git = "https://github.com/taikoxyz/signatures.git", branch = "0.16.9", package = "ecdsa", default-features = false, features = ["der"] }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }

